# cookiecutter-ml-boilerplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.pipenv.yaml  Dockerfile  Makefile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/licenses/: Apache-2.0.txt  MIT.txt  Proprietary.txt
