{% if cookiecutter.dependency_manager == "Poetry" %}
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_name }}"
license = "{{ cookiecutter.license }}"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
{% if cookiecutter.include_fastapi == "y" %}
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.21.0" }
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc = { extras = ["s3"], version = "^3.0.0" }
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow = "^2.3.0"
{% endif %}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs = { version = "^1.4.0", optional = true }
{% endif %}

[tool.poetry.scripts]
train = "{{ cookiecutter.project_slug }}.cli:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py{{ cookiecutter.python_version.split('.')[0] }}{{ cookiecutter.python_version.split('.')[1] }}"]

[tool.isort]
profile = "black"

{% elif cookiecutter.dependency_manager == "Pipenv" %}
[packages]
pandas = "==2.0.0"
scikit-learn = "==1.3.0"
numpy = "==1.24.0"
{% if cookiecutter.include_fastapi == "y" %}
fastapi = "==0.95.0"
uvicorn = "==0.21.0"
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc[s3] = "==3.0.0"
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow = "==2.3.0"
{% endif %}

[dev-packages]
black = "==23.3.0"
mypy = "==1.0.0"
flake8 = "==6.0.0"
isort = "==5.12.0"
pre-commit = "==3.3.0"
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs = "==1.4.0"
{% endif %}

[requires]
python_version = ">=3.10,<4.0"

[scripts]
train = "python -m {{ cookiecutter.project_slug }}.cli train"

{% elif cookiecutter.dependency_manager == "Requirements" %}
# requirements.txt
pandas==2.0.0
scikit-learn==1.3.0
numpy==1.24.0
{% if cookiecutter.include_fastapi == "y" %}
fastapi==0.95.0
uvicorn[standard]==0.21.0
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc[s3]==3.0.0
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow==2.3.0
{% endif %}

# dev-requirements.txt
black==23.3.0
mypy==1.0.0
flake8==6.0.0
isort==5.12.0
pre-commit==3.3.0
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs==1.4.0
{% endif %}
{% endif %}
