{% if cookiecutter.dependency_manager == "Poetry" %}
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_name }}"
license = "{{ cookiecutter.license }}"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
{% if cookiecutter.include_fastapi == "y" %}
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc = { extras = ["s3"], version = "^3.50.1" }
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow = "^2.13.0"
{% endif %}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
ipykernel = "^6.29.4"
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs = { version = "^1.5.3", optional = true }
{% endif %}

[tool.poetry.scripts]
train = "{{ cookiecutter.project_slug }}.cli:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py{{ cookiecutter.python_version.split('.')[0] }}{{ cookiecutter.python_version.split('.')[1] }}"]

[tool.isort]
profile = "black"

{% elif cookiecutter.dependency_manager == "Pipenv" %}
[packages]
pandas = "==2.2.2"
scikit-learn = "==1.4.2"
numpy = "==1.26.4"
{% if cookiecutter.include_fastapi == "y" %}
fastapi = "==0.111.0"
uvicorn = "==0.30.0"
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc[s3] = "==3.50.1"
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow = "==2.13.0"
{% endif %}

[dev-packages]
black = "==24.4.2"
mypy = "==1.10.0"
flake8 = "==7.0.0"
isort = "==5.13.2"
pre-commit = "==3.7.0"
pytest = "==8.2.0"
ipykernel = "==6.29.4"
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs = "==1.5.3"
{% endif %}

[requires]
python_version = ">=3.10,<4.0"

[scripts]
train = "python -m {{ cookiecutter.project_slug }}.cli train"

{% elif cookiecutter.dependency_manager == "Requirements" %}
# requirements.txt
pandas==2.2.2
scikit-learn==1.4.2
numpy==1.26.4
{% if cookiecutter.include_fastapi == "y" %}
fastapi==0.111.0
uvicorn[standard]==0.30.0
{% endif %}
{% if cookiecutter.use_dvc == "y" %}
dvc[s3]==3.50.1
{% endif %}
{% if cookiecutter.include_mlflow == "y" %}
mlflow==2.13.0
{% endif %}

# dev-requirements.txt
black==24.4.2
mypy==1.10.0
flake8==7.0.0
isort==5.13.2
pre-commit==3.7.0
pytest==8.2.0
ipykernel==6.29.4
{% if cookiecutter.include_docs == "mkdocs" %}
mkdocs==1.5.3
{% endif %}
{% endif %}
